    https://cwiki.apache.org/confluence/display/CASSANDRA/CEP-21%3A+Transactional+Cluster+Metadata for more detail on
    the motivation and design, and see "Upgrading" below for specific instructions on migrating clusters to this system.
    More updates and documentation to follow.
    - New Guardrails added:
      - Whether bulk loading of SSTables is allowed.

Upgrading
---------
    [The following is a placeholder, to be revised asap]
    - Upgrading to 5.1 is currently only supported from 4.0, 4.1 or 5.0. Clusters running earlier releases must first
    upgrade to at least the latest 4.0 release. When a cluster is upgraded to 5.1 there is an additional step for
    operators to perform. The upgrade is not considered complete until:
      1. All UP nodes are running 5.1
      2. The Cluster Metadata Service (CMS) has been enabled
    The first step is just a regular upgrade, there are no changes to external APIs, SSTable formats to consider.
    Step 2 requires an operator to run a new nodetool subcommand, intializecms, on one node in the cluster.
      - > nodetool initializecms
    Doing so creates the CMS with the local node as its only member. The initializecms command cannot be executed until
    step 1 is complete and all nodes are running 5.1 as migrating metadata management over to the new TCM system
    requires all nodes to be in agreement over the current state of the cluster. Essentially this means agreement on
    schema and topology. Once the upgrade has started, but before initializecms is run, metadata-changing operations are
    not permitted and if attempted from an upgraded node will be rejected.
    Prohibited operations include:
      - schema changes
      - node replacement
      - bootstrap
      - decommission
      - move
      - assasinate
    For the time being there is no mechanism in place to prevent these operations being executed by a node still running